Added the meeting note of Jan 18 meeting

--- a/Meeting Notes/2021-01-11.md
+++ b/Meeting Notes/2021-01-11.md
@@ -12,7 +12,7 @@ None
 Explained [Extracting interdependent requirements and resolving conflicted requirements of safety and security for industrial control systems](https://ieeexplore.ieee.org/document/7366481) in detail and discussed possible future work. The areas from which we can realize my thesis question discussed which are:
 * The project I'm working on with  Amy
 * The ARTTA4 project
-* The parpers I study
+* The papers I study
 ## Action Items
 #### By Alireza Imani
 - Study papers relevant to our furture work
