--- a/Meeting Notes/2021-02-08.md
+++ b/Meeting Notes/2021-02-08.md
@@ -9,7 +9,7 @@
 ## General Updates
 
 - Talked to Dr. Belostotski to buy me a laptop
-- Discussed with Dr. Moshirpour about the situation I have with my laptop and he told me that he will check whther Dr. Leo Belostotski has budget to help me or not.
+- Discussed with Dr. Moshirpour about the situation I have with my laptop and he told me that he will check whether Dr. Leo Belostotski has budget to help me or not.
 
 ## Software Development
 
