added today's meeting

--- a/Meeting Notes/2021-06-14.md
+++ b/Meeting Notes/2021-06-14.md
@@ -1,5 +1,5 @@
 # Session 23
-*Monday, June 7th, 2021*
+*Monday, June 14th, 2021*
 
 ## Attendees
 
@@ -8,7 +8,7 @@
 
 ## General Updates
 
-Completed some online courses for NRC
+Have a meeting with Dr. Woelfel tomorrow regarding the summer talk for IEEE
 
 ## Software Development
 
@@ -16,13 +16,14 @@ None
 
 ## Research
 
-Wrote Disadvatanges to Tango Controls and started writing our proposed framework
+Continuiing working on our proposed framework
 
 ## Action Items
 
 #### By Alireza Imani
 
 - Continue writing paper
+- Continue writing course report
 
 #### By Dr. Moshirpour
 None
