Added research note & meeting notes

--- a/Meeting Notes/2021-10-25.md
+++ b/Meeting Notes/2021-10-25.md
@@ -1,5 +1,5 @@
-# Session 40
-*Monday, October 18th, 2021*
+# Session 41
+*Monday, October 25th, 2021*
 
 ## Attendees
 
@@ -16,15 +16,15 @@ None
 
 ## Research
 
-- Finalized the paper
-- Reviewed 3 papers
+- Wrote the preliminary version of abstract
+- Reviewed "Risk Awareness in Open Source Component Selection"
 
 ## Action Items
 
 #### By Alireza Imani
 
 - Find potential venues for the paper
-- Write abstract of the next paper
+- Continue writing the paper
 
 #### By Dr. Moshirpour
 - None
